maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:17: error: value L is not a member of Int
    for (y <- 0 L-1){
                ^