maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run() {
    // Your code here
  val H = getWorldHeight()
  val L = getWorldWidth()
  val coordSortie = findExit(H,L)
  val xSortie = coordSortie(0)
  val ySortie = coordSortie(1)
  
  
}

def findExit(H:Int, L:Int):Array[Int] ={
  /* Renvoie la sortie d'un monde de taille (H,L) donnée */
  var coord = Array(0,0)
  for (x <- 0 to H-1){
    for (y <- 0 L-1){
      if (isOverBaggle){
        coord(0) = x
        coord(1) = y
      }
    }
  }
  return coord  
}